name:                git-fast-export-filter
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/benizi/haskell-git-fast-export-filter
license:             MIT
license-file:        LICENSE
author:              Benjamin R. Haskell
-- maintainer:
copyright:           2017
-- category:
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable git-fast-export-filter
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , binary == 0.8.*
                     , bytestring == 0.10.*
                     , conduit == 1.2.*
                     , conduit-combinators == 1.1.*
                     , conduit-extra == 1.2.*
                     , filepath == 1.4.*
                     , megaparsec == 5.2.*
                     , mtl == 2.2.*
                     , time == 1.6.*
  ghc-options:         -Wall
